# dcat-fastapi-listener

./: README.md  pyproject.toml
src/dcat_listener/: __init__.py  core.py  hook.py  middleware.py  shipper.py  sql.py
tests/: test_core.py  test_hook.py  test_middleware.py  test_shipper.py  test_sql.py
