[project]
name = "dcat-fastapi-listener"
version = "0.1.0"
description = "Lightweight SQLAlchemy query listener for FastAPI that ships endpoint→table lineage to a DCAT catalog"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=26.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sqlalchemy>=2.0",
    "starlette>=0.45",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dcat_listener"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
